major refactoring of HMDBUtils

--- a/pom.xml
+++ b/pom.xml
@@ -27,16 +27,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
@@ -86,6 +76,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.omnaest.utils</groupId>
+			<artifactId>CommonsLangAndIO</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
